--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -391,9 +391,24 @@
     justify-content: space-around;
   }
 
+  .container-product-item-left{
+    color: #555555;
+    font-size: 2.2rem;
+    text-align: center;
+    padding-top: 100px ;
+    right: 0;
+  }
+  .container-product-item-right{
+    color: #555555;
+    font-size: 2.2rem;
+    text-align: center;
+    padding-top: 100px ;
+    right: 0;
+  }
+
   .container-product-imageChange{
-    max-width: 230px;
-    height: auto;
+    height: 225px;
+    height: 185px;
   }
 
   .container-price{
